--- a/heart-disease-classifiation.ipynb
+++ b/heart-disease-classifiation.ipynb
@@ -3434,7 +3434,7 @@
    "source": [
     "# Cross-validated precision\n",
     "cv_precision = cross_val_score(clf, X, y, cv=5, scoring=\"precision\")\n",
-    "cv_precision = np.mean(cv_prec)\n",
+    "cv_precision = np.mean(cv_precision)\n",
     "cv_precision"
    ]
   },
